@@ -121,7 +121,16 @@ $.ReferenceStrip = function ( options ) {
         enterHandler:   $.delegate( this, onStripEnter ),
         leaveHandler:   $.delegate( this, onStripLeave ),
         keyDownHandler: $.delegate( this, onKeyDown ),
-        keyHandler:     $.delegate( this, onKeyPress )
+        keyHandler:     $.delegate( this, onKeyPress ),
+        preProcessEventHandler: function (eventInfo) {
+            switch (eventInfo.eventType) {
+                case 'wheel':
+                    eventInfo.preventDefault = true;
+                    break;
+                default:
+                    break;
+            }
+        }
     } );
 
     //Controls the position and orientation of the reference strip and sets the
@@ -348,7 +357,6 @@ function onStripDrag( event ) {
             }
         }
     }
-    return false;
 
 }
 
@@ -397,8 +405,6 @@ function onStripScroll( event ) {
             }
         }
     }
-    //cancels event
-    return false;
 }
 
 
@@ -489,7 +495,6 @@ function onStripEnter( event ) {
         element.style.marginLeft = "0px";
 
     }
-    return false;
 }
 
 
@@ -512,7 +517,6 @@ function onStripLeave( event ) {
         element.style.marginLeft = "-" + ( $.getElementSize( element ).x / 2 ) + "px";
 
     }
-    return false;
 }
 
 
